<resources>
    <string name="app_name">WifiPos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="action_exit">Exit</string>
    <string name="textAboutof">This program is aimed at indoor positioning via Wifi.
    The bar program has two modes Training mode and positioning mode.
    To enter positioning mode must be completed the training mode , this mode will be complete once at least two training points per plane have saved.
    These points used later to calculate positioning mode the current position.
    Access to positioning mode can be either from the menu or training mode from the main screen to access from this must be two conditions, so entrenemiento must be completed and configured by default.
    </string>
    <string name="lblAboutof">About of...</string>
    <string name="tittle_training">Training</string>
    <string name="summary_training">Mode default training or position</string>
    <string name="default_number_refresh">5</string>
    <string name="summary_refresh">Refresh time in seconds to the position</string>
    <string name="tittle_refresh">Refresh Position</string>

    <!-- PlaneTrainingFragment -->
    <string name="btn_ini">Start</string>
    <string name="title_activity_plane">PlaneActivity</string>
    <string name="plane_not_exist">Plane not Exist</string>
    <!-- menu -->
    <string name="access_denied">To access mode must have stored positioning training points</string>
    <string name="tittle_position">Position</string>

    <!-- WI-FI-->
    <string name="wifi">WI-FI</string>
    <string name="msgWifi">The App needs enable Wi-Fi</string>
    <string name="enableWifi">Enable Wi-fi and Intro</string>
    <string name="disableWifi">Disable Wi-fi and Cancel</string>

    <!-- BROADCAST RECEIVER -->
    <string name="wifi_state_disabled">WI-FI STATE DISABLED</string>
    <string name="wifi_state_disabling">WI-FI STATE DISABLING</string>
    <string name="wifi_state_enabled">WI-FI STATE ENABLED</string>
    <string name="wifi_state_enabling">WI-FI STATE ENABLING</string>
    <string name="wifi_state_unknown">WI-FI STATE UNKNOWN</string>

    <!--Dialog wifi-->
    <string name="select_all">Select All</string>
    <string name="Title_new_point">New Point</string>
    <string name="new_point">Enter Point</string>
    <string name="point_x">Coord. X</string>
    <string name="point_y">Coord. Y</string>
    <string name="empty_wifi">There is not any Wi-Fi</string>
    <string name="ok_save_point">The point is save</string>
    <string name="title_activity_plane_position">PlanePositionActivity</string>
    <string name="point_far">You must select a point of training</string>

</resources>
