<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/degraded"
    android:id="@+id/contenedor">

    <Button android:id="@+id/btnIni"
        android:text="@string/btn_ini"
        style="@style/WifiButton"/>

    <Button
        android:id="@+id/settings"
        style="@style/WifiButton"
        android:text="@string/action_settings" />

    <Button
        android:id="@+id/about"
        style="@style/WifiButton"
        android:text="@string/about" />

    <Button
        android:id="@+id/exit"
        style="@style/WifiButton"
        android:text="@string/action_exit" />

</LinearLayout>
