<!-- fragment_edit_name.xml -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"  >

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/table_wifi_Row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip" >
                <TextView
                    android:id="@+id/txt_x"
                    android:text="@string/point_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txt_y"
                    android:text="@string/point_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>


        <Button android:id="@+id/btn_Save_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView android:id="@+id/list_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:background="#ffffff"/>
        <TextView
            android:id="@+id/empty_list_wifi"
            android:text="@string/empty_wifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>

    </LinearLayout>
